--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
