--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1"
   },
   "browserslist": [
     "last 2 versions"
