--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loading-skeleton": "^3.3.1"
+    "react-loading-skeleton": "^3.3.1",
+    "react-router-dom": "^6.14.0"
   },
   "browserslist": [
     "last 2 versions"
